# aims-PAX

./: .geometry.in.swp  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE.md  README.md  active_learning_settings.yaml  asi_test.py  custom_MACECalculator.py  mace_settings.yaml  procedures.py  pyproject.toml  requirements.txt  run_whole_procedure.py  setup.py  setup.sh  setup_MACE.py  setup_MACE_training.py  test_ase.py  test_asi.py  test_procedure.py  train_epoch_mace.py  utilities.py
.github/workflows/: ci.yml
FHI_AL.egg-info/: PKG-INFO
docs/: unit-tests-idg-part3-md-setup.md
example/: aimsPAX.yaml  aimspax_test.sh  control.in  example_aimsPAX.sh  explanation.md  mace.yaml  maceles.yaml
example/data_filtering/: aimsPAX.yaml  explanation.md  model.yaml
example/local/: aimsPAX.yaml  geometry.in  model.yaml
example/pretrained_al/: aimsPAX.yaml  explanation.md
examples/: active_learning_settings.yaml  control.in  geometry.in  initial_ds_time.txt  mace_settings.yaml
examples/crystal/: active_learning_settings.yaml  control.in  mace_settings.yaml
examples/intermol/: active_learning_settings.yaml  control.in  geometry.in  mace_settings.yaml  mol_idxs.npz
examples/multi_system/: control.in
examples/multi_system/geometries/: aspirin.xyz  azobenzene.xyz  ethanol.xyz  malonaldehyde.xyz  naphtalene.xyz  paracetamol.xyz  salicylic.xyz  toluene.xyz  uracil.xyz
examples/multi_system/geometries_small/: benzene.xyz
examples/parsl/: active_learning_settings.yaml  control.in  mace_settings.yaml
examples/periodic/: active_learning_settings.yaml  control.in  geometry.in
examples_dev/: active_learning_settings.yaml  aimspax_test.sh  control.in  control_default.in
examples_dev/intermol/: active_learning_settings.yaml
examples_dev/multi_system/: active_learning_settings.yaml  aimspax_test.sh
examples_dev/parsl/: aimsPAX.yaml  mace.yaml
examples_dev/periodic/: mace_settings.yaml
f90_connect/: f_print_coords.f90  interface_module.f90  mycfunc.c  mymodule.py
fhi_aims_help/: compile.sh  example_initial_cache.cmake
scripts/: check_hdf5_nans.py  run_whole_procedure.py
src/: procedures.py  setup_MACE.py
src/FHI_AL/: __main__.py  al_procedure_only.py  create_initial_ds.py  procedures.py  scratch_train.py  utilities.py
src/FHI_AL.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/FHI_AL/cli/: __main__.py  al_procedure_only.py  create_initial_ds.py  get_atomic_energies.py  recalculate_data.py  scratch_train.py  test_ensemble.py
src/FHI_AL/procedures/: active_learning.py  atomic_energies.py  initial_dataset.py  (+1 more)
src/aims_PAX/: settings.py
tests/: conftest.py  helpers.py  test_al_md_setup.py  test_al_pure_logic.py  test_al_settings.py  test_al_training.py  test_al_workflow.py  test_calc.py  test_cli.py  test_data_handling.py  test_ensemble.py  test_eval_pipeline.py  test_eval_utils.py  test_idg_md_setup.py  test_idg_parsl_sampling.py  test_idg_pure_logic.py  test_idg_settings.py  test_idg_training.py  test_idg_workflow.py  test_input_utils.py  test_packaging_smoke.py  test_restart_roundtrip.py  test_settings.py  test_setup_models.py  test_setup_orchestration.py  test_teacher_student_e2e.py  test_teacher_student_macemp_e2e.py  test_threshold_adaptation.py  test_train_epoch.py  test_uncertainty.py  test_utilities.py
tests/test_atomate2/: conftest.py  test_flows.py  test_msonable.py  test_utils.py
(+77 files in other folders)
