[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aims_PAX"
version = "0.1"
description = "Active learning for FHI-aims"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Placeholder" }
authors = [
    { name = "Tobias Henkes", email = "tobias.henkes@uni.lu" }
]
keywords = []
classifiers = [
    "Programming Language :: Python :: 3"
]
dependencies = [
    "numpy==1.26.4",
    "mace-torch==0.3.14",
    "so3krates-torch==0.1",
    "torch==2.8.0",
    "pyyaml>=6.0.1",
    "ase==3.26.0",
    "parsl==2024.12.16",
    "pydantic>=2.0,<3.0.0"
]

[project.optional-dependencies]
atomate2 = [
    "pyfhiaims",
    "pymatgen-io-aims",
    "atomate2",
]
tests = [
    "pytest",
    "pytest-cov"
]

[project.urls]
homepage = "https://github.com/tohenkes/aims_PAX"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
aims-PAX = "aims_PAX.cli.__main__:main"
aims-PAX-initial-ds = "aims_PAX.cli.create_initial_ds:main"
aims-PAX-idg-v2 = "aims_PAX.atomate2.cli.idg:main"
aims-PAX-idg-split = "aims_PAX.atomate2.cli.datasets:main"
aims-PAX-al = "aims_PAX.cli.al_procedure_only:main"
aims-PAX-recalc = "aims_PAX.cli.recalculate_data:main"
aims-PAX-test = "aims_PAX.cli.test_ensemble:main"
